# grid_watcher

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compile_commands.json  tutorial.txt
.cache/clangd/index/: analyzer.cpp.3774308D1347758B.idx  analyzer.hpp.8D44BC36DE5DA0A8.idx  attack_sim.cpp.9C5902E437229381.idx  executor.cpp.83387F190943727B.idx  executor.hpp.2D12CC0A2C4F8BB5.idx  logger.hpp.D1C9EF17791A3B7A.idx  main.cpp.DAAB739CAC4EC2F9.idx  sniffer.cpp.F0116F8658699035.idx  sniffer.hpp.64C62A06B9F7244A.idx  ts_queue.hpp.6D49DF788D1ABB96.idx
Include/core/: executor.hpp
Include/util/: json_exporter.hpp
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE.md.md  CHANGELOG.md  QUICKSTART.md  ROADMAP.md  SECURITY.md
include/: gridwatcher.hpp
include/core/: analyzer.hpp  executor.hpp  sniffer.hpp
include/util/: json_exporter.hpp  logger.hpp  ts_queue.hpp
scripts/: init.cpp
src/: analyzer.cpp  executor.cpp  json_exporter.cpp  main.cpp  sniffer.cpp
src/core/: analyzer.cpp  executor.cpp  sniffer.cpp
tests/: attack_sim.cpp
www/: dashboard_data.json  index.html
www/css/: style.css
www/js/: dashboard_connector.js
